--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -6,5 +6,6 @@
       "declaration": true,
       "declarationMap": true
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["src/bin", "nodoe_modules", "dist"]
 }
