--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "bin": {
-    "my-hello-lib": "dist/bin/index.js"
+    "npm_package_nyumon": "dist/bin/index.js"
   },
   "files": [
     "dist"
@@ -15,7 +15,8 @@
     "prebuild": "rimraf dist",
     "build": "run-p build:*",
     "build:common": "tsc",
-    "build:esm": "tsc -p tsconfig.esm.json"
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,9 +26,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@jest/types": "^29.3.1",
+    "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "jest": "^29.3.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
